--- a/.travis.yml
+++ b/.travis.yml
@@ -57,12 +57,10 @@ matrix:
         - ant
         - ant-optional
 before_install:
-- git submodule init
-- git submodule update
-- wget https://dl.bintray.com/sonarsource/SonarQube/org/sonarsource/scanner/cli/sonar-scanner-cli/3.2.0.1227/sonar-scanner-cli-3.2.0.1227-linux.zip
-- unzip sonar-scanner-cli-3.2.0.1227-linux.zip
-- export PATH=$PATH:$TRAVIS_BUILD_DIR/sonar-scanner-3.2.0.1227-linux/bin
-- sonar-scanner --help
+- wget https://dl.bintray.com/sonarsource/SonarQube/org/sonarsource/scanner/cli/sonar-scanner-cli/4.6.0.2311/sonar-scanner-cli-4.6.0.2311-linux.zip
+- unzip sonar-scanner-cli-4.6.0.2311-linux.zip
+- export PATH=$PATH:$TRAVIS_BUILD_DIR/sonar-scanner-4.6.0.2311-linux/bin
+- sonar-scanner --version
 before_script:
 - export FC=$FC_COMPILER
 - export CC=$CC_COMPILER
@@ -70,19 +68,22 @@ before_script:
 - export OMPI_CC
 - export OMPI_FC
 script:
-- mkdir build
-- cd build
-- cmake -DCMAKE_INSTALL_PREFIX=$HOME/claw ..
-- make -j
-- make install
-- make -j clean-transformation transformation test
-- cd -
-- "./scripts/check_license"
-- "./scripts/check_author"
+- export CLAW_SRC=$(pwd)
+- python "./scripts/check_author_license.py"
 - "./scripts/check_lib_split"
 - cd scripts
 - "./run.shellcheck"
 - cd ..
+- mkdir build
+- cd build
+- cmake -S ${CLAW_SRC} -DCMAKE_INSTALL_PREFIX=$HOME/claw ..
+- make -j
+- make install
+- export CLAW_BUILD=${CLAW_SRC}/build
+- export CLAW_HOME=${CLAW_BUILD}/home
+- export OMNI_HOME=${CLAW_BUILD}/home
+- make run-tests
+- cd ${CLAW_SRC}
 - if [[ "${TRAVIS_PULL_REQUEST_SLUG}" == "claw-project/claw-compiler" ]]; then sonar-scanner -Dsonar.login=$SONAR_TOKEN; fi
 - if [[ "${TRAVIS_REPO_SLUG}" == "claw-project/claw-compiler" ]] && [[ "${TRAVIS_PULL_REQUEST_SLUG}" == "" ]]; then sonar-scanner -Dsonar.login=$SONAR_TOKEN; fi
 notifications:
