--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,16 @@
 sonar.projectKey=clawfc
 sonar.projectName=CLAW XcodeML to XcodeML Translator
-sonar.projectVersion=1.0.1
+sonar.projectVersion=2.0.1
 sonar.organization=claw-project
 sonar.host.url=https://sonarcloud.io
-sonar.sources=./cx2t/src/claw/
-sonar.java.binaries=./cx2t/src/bin
-sonar.java.libraries=./cx2t/lib/*,./omni-compiler/XcodeML-Common/build/om-common.jar,./omni-compiler/F-BackEnd/build/om-f-back.jar
-sonar.binaries=./cx2t/src/bin,./cx2t/unittest/bin
-sonar.tests=./cx2t/unittest/bin/
+sonar.sources=${env.CLAW_SRC}/cx2t/src/,${env.CLAW_SRC}/driver/src/
+claw.lib.dir=${env.CLAW_HOME}/share/claw
+sonar.java.binaries=${env.CLAW_HOME}/bin/clawfc.jar,${claw.lib.dir}/claw-external-set.jar,${claw.lib.dir}/claw-x2t-shenron.jar,${claw.lib.dir}/claw-x2t-tatsu.jar,${claw.lib.dir}/claw-x2t-wani.jar
+sonar.java.libraries=${env.CLAW_BUILD}/cx2t/3rdparty/dist/*.jar,${env.OMNI_HOME}/share/*.jar
+claw.ut.lib.dir=${env.CLAW_BUILD}/cx2t/unit-tests/dist
+sonar.java.test.binaries=${env.CLAW_BUILD}/driver/tests/bin/clawfc-tests.jar,${env.CLAW_BUILD}/driver/ut/bin/clawfc-ut.jar,${claw.ut.lib.dir}/claw-x2t-tatsu-ut.jar,${claw.ut.lib.dir}/claw-x2t-wani-ut.jar,${claw.ut.lib.dir}/claw-x2t-shenron-ut.jar
+sonar.java.test.libraries=${sonar.java.libraries}
+sonar.java.source=1.8
 sonar.dynamicAnalysis=reuseReports
-sonar.exclusions=**/*BaseListener.java,**/ClawParser.java,**/ClawLexer.java,**/ClawListener.java,**/*.java.in,**/*.tokens,**/*.g4,**/TestConstant.java,**/ClawVersion.java
-sonar.junit.reportPaths=./build/reports
 sonar.core.codeCoveragePlugin=jacoco
-sonar.jacoco.reportPaths=./build/reports/jacoco.exec
+sonar.coverage.jacoco.xmlReportPaths=${env.CLAW_BUILD}/test-reports/*.jacoco.xml
