Fixed passing cpp compiler to omni build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ if(BUILD_OMNI_XCODEML_TOOLS)
     INSTALL_DIR ${OMNI_HOME}
     CONFIGURE_COMMAND
       CC=${CMAKE_C_COMPILER}
+      CXX=${CMAKE_CXX_COMPILER}
       ${CMAKE_COMMAND} ${OMNI_CMAKE_ARGS}
     BUILD_COMMAND make -j build-jni-install ffront-jni-driver
     BUILD_IN_SOURCE OFF
