--- a/driver/etc/clawfc.properties.in
+++ b/driver/etc/clawfc.properties.in
@@ -2,7 +2,7 @@
 # See LICENSE file for more information
 #
 # clawfc java configuration input file. This file is configured at build time and
-# contains all the necessary variable to run the clawfc driver.
+# contains all the necessary variables to run the clawfc driver.
 #
 # author: Mikhail Zhigun
 #
@@ -41,12 +41,12 @@ COMMON_CLI="@COMMON_CLI@"
 TOML="@TOML@"
 
 # Translator jars list
-JAR1="${OMNI_JAR_TOOLS}:${OMNI_JAR_F_BACKEND}"
-JAR1="${JAR1}:${OMNI_JAR_C_BACKEND}:${CLAW_X2T_TATSU_JAR}"
-JAR1="${JAR1}:${CLAW_X2T_SHENRON_JAR}:${CLAW_X2T_WANI_JAR}:${COMMON_CLI}"
-JAR1="${JAR1}:${ANTLR4}:${ANTLR4_RUNTIME}:${TOML}"
+JARS="${OMNI_JAR_TOOLS}:${OMNI_JAR_F_BACKEND}:${OMNI_JAR_C_BACKEND}:${OMNI_JAR_JNI}"
+JARS="${JARS}:${CLAW_X2T_TATSU_JAR}"
+JARS="${JARS}:${CLAW_X2T_SHENRON_JAR}:${CLAW_X2T_WANI_JAR}:${COMMON_CLI}"
+JARS="${JARS}:${ANTLR4}:${ANTLR4_RUNTIME}:${TOML}"
 
-OMNI_FX2X_MUST_OPT="-cp ${JAR1} claw.wani.ClawX2T"
+OMNI_FX2X_MUST_OPT="-cp ${JARS} claw.wani.ClawX2T"
 OMNI_FX2X_OPT="@JAVA_OPT@ ${OMNI_FX2X_MUST_OPT} @OMNI_X2X_FLAGS@"
 
 # Driver
