--- a/resources/eclipse/clawfc-unit-tests.classpath.in
+++ b/resources/eclipse/clawfc-unit-tests.classpath.in
@@ -54,6 +54,7 @@
 	<classpathentry kind="lib" path="@CX2T_3RDPARTY_DIST_DIR@/jakarta.activation.jar"/>
 	<classpathentry kind="lib" path="@CX2T_3RDPARTY_DIST_DIR@/istack-commons-runtime.jar"/>
 	<classpathentry kind="lib" path="@OMNI_JAR_TOOLS@"/>
+	<classpathentry kind="lib" path="@OMNI_JAR_JNI@"/>
 	<classpathentry kind="lib" path="@OMNI_JAR_F_BACKEND@"/>
 	<classpathentry kind="lib" path="@OMNI_JAR_C_BACKEND@"/>
 	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_TATSU@.jar"/>
