--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ option(OMNI_LINK_STATIC_GNU_LIBSTDCXX "OMNI Link static libstdc++ when building 
 
 # Build OMNI compiler
 if(BUILD_OMNI_XCODEML_TOOLS)
-  set(OMNI_COMPILER_SRC_DIR ${CMAKE_BINARY_DIR}/omni-compiler)
+  set(OMNI_COMPILER_SRC_DIR ${CMAKE_SOURCE_DIR}/xcodeml-tools)
   set(OMNI_COMPILER_BUILD_DIR ${CMAKE_BINARY_DIR}/omni-compiler-build)
   set(OMNI_CMAKE_ARGS -S ${OMNI_COMPILER_SRC_DIR} -DCMAKE_INSTALL_PREFIX=${OMNI_HOME} -DCMAKE_BUILD_TYPE=Release)
   if(DEFINED JAVA_HOME)
@@ -111,11 +111,6 @@ if(BUILD_OMNI_XCODEML_TOOLS)
   endif()
   ExternalProject_Add(
     omni-compiler
-    GIT_REPOSITORY ${OMNI_GIT_REPOSITORY}
-    GIT_TAG ${OMNI_GIT_COMMIT_HASH}
-    GIT_SHALLOW ON
-    GIT_PROGRESS ON
-    GIT_REMOTE_UPDATE_STRATEGY CHECKOUT
     SOURCE_DIR ${OMNI_COMPILER_SRC_DIR}
     BINARY_DIR ${OMNI_COMPILER_BUILD_DIR}
     INSTALL_DIR ${OMNI_HOME}
