[NFC] Fix not specified author

--- a/cx2t/ivy.xml
+++ b/cx2t/ivy.xml
@@ -1,7 +1,7 @@
 <!--
  This file is released under terms of BSD license
  See LICENSE file for more information
- @author: not specified
+ @author: clementval
 -->
 
 <!-- Dependencies for CX2X -->
