--- a/cx2t/src/build.xml
+++ b/cx2t/src/build.xml
@@ -1,7 +1,7 @@
 <!--
  This file is released under terms of BSD license
  See LICENSE file for more information
- @author: not specified
+ @author: clementval
 -->
 
 <!-- CLAW X2T build process -->
