--- a/cx2t/unittest/build.xml
+++ b/cx2t/unittest/build.xml
@@ -1,7 +1,7 @@
 <!--
  This file is released under terms of BSD license
  See LICENSE file for more information
- @author: not specified
+ @author: clementval
 -->
 
 <project name="claw-unit-tests" default="main" basedir="."
