--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,6 @@ jobs:
         run: | 
           mkdir build
           cd build
-          cmake ..
-          
-      - name: Build
-        run: make -j
+          cmake -DCMAKE_INSTALL_PREFIX=../install ..
+          make -j
+          make install
