--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,13 @@ jobs:
           ./run.shellcheck
           cd ..
       
-      - name: Configure
+      - name: Build + test
         run: | 
           mkdir build
           cd build
           cmake -DCMAKE_INSTALL_PREFIX=../install ..
           make -j
           make install
+          export CLAW_HOME=../install
+          export OMNI_HOME=../install
+          make run-tests
